--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(../images/partituraFondo.jpg);
+  background-image: url(../images/mapaauto.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
