--- a/style/style.css
+++ b/style/style.css
@@ -1,24 +1,12 @@
 body {
-  background-image: url(../images/mapaauto.jpg);
+  background-image: url(../images/route-74791_1920.jpg);
+  background-size: auto;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
   background-attachment: fixed;
-  text-align: center;
 }
-header {
-  margin-top: 5%;
-  margin-bottom: 10%;
-  height: 300%;
-  width: auto;
-  text-align: center;
-  font-family: "Times New Roman", Times, serif;
-  font-style: italic;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
+/*estilos barra de navegación*/
 .navbar.navbar-expand-lg.navbar-light.bg-light {
   background-color: rgba(0, 0, 0, 0.1) !important;
 }
@@ -29,14 +17,58 @@ header {
 .nav-link {
   color: aliceblue !important;
 }
-.viaje {
-  text-align: center;
+/* Estilos seccion principal yendo desde lo el bloque principal, hacia los textos */
+header {
+  background-color: rgba(0, 0, 0, 0.363);
+  margin-top: 0.5%;
+  margin-bottom: 0.5%;
+  margin-left: 5%;
+  margin-right: 5%;
+  height: 60vh;
+  width: 90vw;
   font-family: "Times New Roman", Times, serif;
   font-style: italic;
-  margin: 10%;
 }
-.mapa {
-  margin-top: 5%;
-  height: 40%;
-  width: 50%;
+.contenedor {
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  justify-content: space-around;
+}
+#titulo {
+  color: #ff7c39;
+  margin-top: 40%;
+  margin-left: 10%;
+  width: 30vw;
+  height: 30vh;
+}
+#logo {
+  background-image: url(../images/LogoMusica.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: top;
+  background-attachment: inherit;
+  margin-left: 30%;
+  width: 40vw;
+  height: 40vh;
+  max-width: 30vw;
+  min-width: none;
+}
+#contenerLogo {
+  width: 50vw;
+  height: 50vh;
+}
+/* Estilos seccion de las actividaes que se llevan a cabo*/
+section {
+  background-color: rgba(0, 0, 0, 0.363);
+  margin-top: 0.5%;
+  margin-bottom: 0.5%;
+  margin-left: 5%;
+  margin-right: 5%;
+  height: 60vh;
+  width: 90vw;
+  font-family: "Times New Roman", Times, serif;
+  font-style: italic;
 }
