--- a/style/style.css
+++ b/style/style.css
@@ -37,11 +37,12 @@ header {
   justify-content: space-around;
 }
 #titulo {
+  text-align: center;
   color: #ff7c39;
-  margin-top: 40%;
-  margin-left: 10%;
-  width: 30vw;
-  height: 30vh;
+  margin-top: 25%;
+  margin-left: 20%;
+  width: 40vw;
+  height: 50vh;
 }
 #logo {
   background-image: url(../images/LogoMusica.png);
@@ -50,6 +51,7 @@ header {
   background-size: cover;
   background-position: top;
   background-attachment: inherit;
+  margin-top: 5%;
   margin-left: 30%;
   width: 40vw;
   height: 40vh;
@@ -67,8 +69,18 @@ section {
   margin-bottom: 0.5%;
   margin-left: 5%;
   margin-right: 5%;
-  height: 60vh;
+  height: 30%;
   width: 90vw;
   font-family: "Times New Roman", Times, serif;
   font-style: italic;
+}
+section .btn.btn-warning {
+  border-radius: 50%;
+}
+#contenedorAct {
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  justify-content: space-around;
 }
