--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ body {
 }
 /*estilos barra de navegación*/
 .navbar.navbar-expand-lg.navbar-light.bg-light {
-  background-color: rgba(0, 0, 0, 0.1) !important;
+  background-color: rgba(0, 0, 0, 0.363) !important;
 }
 .navbar-brand {
   color: aliceblue !important;
@@ -77,10 +77,33 @@ section {
 section .btn.btn-warning {
   border-radius: 50%;
 }
+.texto {
+  color: rgb(207, 206, 206);
+}
+.tituloAct {
+  color: #ff7c39;
+}
+.col-md {
+  background-color: rgba(0, 0, 0, 0.356);
+  border-radius: 3%;
+  margin-left: 1%;
+  margin-right: 1%;
+  margin-top: 1%;
+  margin-bottom: 1%;
+}
+.btn .btn-warning {
+  margin-bottom: 2px !important;
+}
 #contenedorAct {
   text-align: center;
   display: flex;
   flex-direction: row;
   justify-content: center;
   justify-content: space-around;
+}
+/* Estilos seccion de los viajes, rodando que se llevan a cabo*/
+.col-sm {
+  margin-block: 2%;
+  height: 25vh;
+  width: 25vw;
 }
