--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap");
+
 body {
   background-image: url(../images/route-74791_1920.jpg);
   background-size: auto;
@@ -44,6 +46,9 @@ header {
   width: 40vw;
   height: 50vh;
 }
+h1 {
+  font-family: "Mr Dafoe", cursive;
+}
 /* #logo {
   background-image: url(../images/LogoMusica.png);
   background-size: cover;
@@ -59,10 +64,16 @@ header {
   max-width: 30vw;
   min-width: none;
 } */
-#contenerLogo {
+header .col-md {
+  background-color: rgba(0, 0, 0, 0) !important;
+}
+/* #contenerLogo {
+  margin-top: 5%;
+  margin-left: 30%;
+  margin-right: 5%;
   width: 50vw;
   height: 50vh;
-}
+} */
 /* @media screen and (max-width: 800px) {
   #logo {
     background-image: url(../images/LogoMusicaChico.png);
