--- a/style/style.css
+++ b/style/style.css
@@ -42,7 +42,7 @@ header {
   text-align: center;
   color: #ff8200;
   margin-top: 25%;
-  margin-left: 20%;
+  margin-left: 30%;
   width: 40vw;
   height: 50vh;
 }
@@ -107,6 +107,7 @@ section .btn.btn-warning {
   color: rgb(207, 206, 206);
 }
 .tituloAct {
+  font-weight: 400;
   color: #ff8200;
 }
 .col-md {
